2003-02-28  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: close data connection when sending ABOR over ssl.

2003-02-26  Alexander V. Lukyanov <lav@yars.free.net>

	* OutputJob.cc: fixed large file support (should have used off_t).
	* HttpDir.cc: handle \r just in case.
	* CmdExec.cc: set slot's cwd even if non-interactive.

2003-02-14  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopy.cc, FileCopyFtp.cc: don't start "put" peer if target file
	  is already complete; don't get size multiple times (occasionally).
	* MirrorJob.cc: new options --log and --script. Implement producing
	  command log or script file with commands to do mirroring.
	* ftpclass.cc: fix dead-lock when resuming fxp with passive source.

2003-02-11  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: another workaround for proftpd.
	* FileCopy.cc: re-get file size/date after redirect.

2003-02-10  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: lower bind error message level; work around for proftpd;
	  don't send ABOR if disconnecting immediately (quit_sent).
	* FileAccess.cc: handle EPIPE as temporary; properly initialize
	  array_cnt and array_ptr.

2003-01-27  Oskar Liljeblad <oskar@osk.mine.nu>

	* FileSet.cc, FileSet.h, commands.cc: add cls sorting by date.

2003-01-19  Alexander V. Lukyanov <lav@yars.free.net>

	* NetAccess.cc: include sys/types.h as suggested by Camille Huot
	  <cam@cameuh.net> to make it compile on OpenBSD.

2003-01-16  Alexander V. Lukyanov <lav@yars.free.net>

	* GetFileInfo.cc: don't check if `..', `.' and `/' are files.
	* NetAccess.cc: don't set filetype to NORMAL, unset it instead when
	  following a link; fix compilation on solaris 2.6.

2003-01-10  Paul Lew <paullew@cisco.com>

	* resource.cc: fix build on solaris 2.6.

2003-01-05  Alexander V. Lukyanov <lav@yars.free.net>

	* Fish.cc: add -a option for ls.
	* commands.cc: add -d option for lftp -f and lftp -c.

2002-12-25  Alexander V. Lukyanov <lav@yars.free.net>
